# mybot

./: app.py  chatbot.js  database_setup.py  faq1.db  index.html  pyproject.toml  style.css
